# genta-api

./: LICENSE  README.md  pyproject.toml
src/genta/: __init__.py  api.py
src/genta_api/: __init__.py  api.py
